# itmo

./: CMakeLists.txt  README.md
sem_1/: README.md
sem_1/algo/sort/: bubble.cpp  insertion.cpp  merge.cpp  quick.cpp
